# hellopyside

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: make_bundle.yml
src/hellopyside/: __main__.py  app.py
